DiffElement: Ensure move indicators are always visible
Vector headings use overflow:hidden, which clips the move indicator.

Bug: T270557

--- a/src/ui/styles/elements/ve.ui.DiffElement.css
+++ b/src/ui/styles/elements/ve.ui.DiffElement.css
@@ -181,6 +181,7 @@ del[ data-diff-action='remove' ]:hover,
 }
 
 [ data-diff-move ] {
+	overflow: visible;
 	position: relative;
 	opacity: 1;
 }
